<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBEF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stonehenge_image"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/stonehenge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stonehenge_text"
            android:layout_marginTop="420sp"
            android:text="@string/stonehenge"
            android:textColor= "#AC9377"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="450sp"
            android:id="@+id/pyramids_image"
            android:contentDescription="@string/pyramids"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pyramids_text"
            android:layout_marginTop="850sp"
            android:text="@string/pyramids"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/petra_image"
            android:layout_marginTop="880sp"
            android:contentDescription="@string/petra"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/petra_text"
            android:layout_marginTop="1280sp"
            android:text="@string/petra"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/colosseum_image"
            android:layout_marginTop="1310sp"
            android:contentDescription="@string/colosseum"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/colosseum_text"
            android:layout_marginTop="1710sp"
            android:text="@string/colosseum"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hagia_image"
            android:layout_marginTop="1740sp"
            android:contentDescription="@string/hagiasophia"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hagia_text"
            android:layout_marginTop="2140sp"
            android:text="@string/hagiasophia"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/angkor_image"
            android:layout_marginTop="2170sp"
            android:contentDescription="@string/ankgor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/angkor_text"
            android:layout_marginTop="2570sp"
            android:text="@string/ankgor"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/moai_image"
            android:layout_marginTop="2600sp"
            android:contentDescription="@string/moai"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/moai_text"
            android:layout_marginTop="3000sp"
            android:text="@string/moai"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/machu_image"
            android:layout_marginTop="3030sp"
            android:contentDescription="@string/machu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/machu_text"
            android:layout_marginTop="3430sp"
            android:text="@string/machu"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mahal_image"
            android:layout_marginTop="3460sp"
            android:contentDescription="@string/mahal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mahal_text"
            android:layout_marginTop="3860sp"
            android:text="@string/mahal"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/eiffel_image"
            android:layout_marginTop="3890sp"
            android:contentDescription="@string/eiffel"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/eiffel_text"
            android:layout_marginTop="4290sp"
            android:text="@string/eiffel"
            android:textColor= "#AC9377"
            android:textSize="30sp"/>

    </RelativeLayout>



</ScrollView>